# steamos-permanent-mods

./: .gitignore  .markdownlint.json  CHANGELOG.md  KNOWN_BUGS.md  Makefile.am  README.md  autogen.sh  configure.ac  go.mod  go.sum
cmd/steammutator/: main.go
config/: Makefile.am  README.md  README.md.in
config/examples/: 00-pacman.sh  10-pacman-unstrip.sh  20-locale.sh  50-alien.sh  50-golang.sh  50-kdeconnect.sh  80-ffmpeg-ndi.sh  90-grub.sh  90-homebrew-plugin-loader.sh  90-ssh.sh  Makefile.am
internal/: steamos.go  steamos_readonly.go
scripts/: Makefile.am  post-install.sh  post-install.sh.in
tools/: configure.commit.sh  version.sh
